# HybridESMBench

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  test.py
hybridesmbench/: __init__.py  _utils.py  exceptions.py  typing.py
hybridesmbench/doc/eval/: diags.md  loaders.md
hybridesmbench/eval/: __init__.py
hybridesmbench/eval/_diags/: __init__.py  base.py  convert_metadata.py
hybridesmbench/eval/_diags/maps/: __init__.py
hybridesmbench/eval/_diags/maps/data/asr/: OBS_CERES-EBAF_sat_Ed4.2_Amon_asr_20030101-20221231.nc  OBS_CERES-EBAF_sat_Ed4.2_Amon_asr_20030101-20221231_provenance.xml  metadata.yml
hybridesmbench/eval/_diags/maps/data/clivi/: OBS_ESACCI-CLOUD_sat_AVHRR-AMPM-fv3.0_Amon_clivi_19970101-20161231.nc  OBS_ESACCI-CLOUD_sat_AVHRR-AMPM-fv3.0_Amon_clivi_19970101-20161231_provenance.xml  metadata.yml
hybridesmbench/eval/_diags/maps/data/clt/: OBS_ESACCI-CLOUD_sat_AVHRR-AMPM-fv3.0_Amon_clt_19970101-20161231.nc  (+2 more)
hybridesmbench/eval/_diags/portrait_plot/: __init__.py
hybridesmbench/eval/_diags/profiles/: __init__.py
hybridesmbench/eval/_diags/recipes/: README.md  recipe_maps.yml  recipe_portrait_plot.yml  recipe_profiles.yml  recipe_sanity_checks.yml  recipe_timeseries.yml
hybridesmbench/eval/_diags/sanity_checks_1/: __init__.py
hybridesmbench/eval/_diags/sanity_checks_2/: __init__.py
hybridesmbench/eval/_diags/timeseries/: __init__.py
hybridesmbench/eval/_load/: __init__.py  base.py  icon.py  icon_base.py
hybridesmbench/eval/_loaders/: __init__.py  base.py  cmip.py  icon.py
notebooks/: evaluation.ipynb
(+2103 files in other folders)
